# Demeter

./: .env.example  .gitignore  README.md  index.html  plan.md
backend/: API.md  Cargo.toml  config.toml
backend/src/: config.rs  database.rs  handlers.rs  main.rs  models.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  counter.ts
frontend/src/views/: HistoryView.vue  LoginView.vue  TodoListView.vue
