[package]
name = "demeter-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demeter"
path = "src/main.rs"

[[bin]]
name = "create_user"
path = "src/bin/create_user.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
once_cell = "1.19"
toml = "0.8"
sha2 = "0.10"
base64 = "0.21"